--- a/DynamicSun/appsettings.json
+++ b/DynamicSun/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PostgreSQL": "Host=localhost;Port=5433;Database=postgres;Username=postgres;Password=676767"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
